[package]
name = "heater"
description = "simple sitemap-based cache-warming with header variations."
version = "0.2.3"
authors = ["Denis Cornehl <denis.cornehl@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["cache", "cdn", "warming", "warm", "sitemap"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
repository = "https://github.com/syphar/heater/"
readme = "README.md"

[dependencies]
anyhow = "1.0.41"
async-recursion = "0.3.2"
clap = "2.33.3"
console = { version="0.14.1", default-features = false }
counter = "0.5.2"
futures = { version="0.3.15", default-features = false, features = ["alloc"] }
histogram = "0.6.9"
indicatif = "0.16.2"
itertools = "0.10.1"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_warn"] }
num_cpus = "1.13.0"
once_cell = "1.8.0"
pretty_env_logger = "0.4.0"
reqwest = { version="0.11.4", default-features = false, features = ["gzip", "native-tls"] }
sitemap = "0.4.1"
thiserror = "1.0.25"
tokio = {version="1.7.1", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
xml-rs = "0.8.3"

[dev-dependencies]
mockito = "0.30.0"
test-case = "1.1.0"
