[package]
name = "heater"
description = "simple sitemap-based cache-warming with header variations."
version = "0.3.2"
authors = ["Denis Cornehl <denis@cornehl.org>"]
edition = "2018"
license = "MIT"
keywords = ["cache", "cdn", "warming", "warm", "sitemap"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
repository = "https://github.com/syphar/heater/"
readme = "README.md"

[dependencies]
anyhow = "1.0.44"
async-recursion = "1.0.0"
clap = { version = "4.1.1", features = ["cargo"] }
console = { version = "0.15.0", default-features = false }
counter = "0.6.0"
futures = { version = "0.3.17", default-features = false, features = ["alloc"] }
histogram = "0.11.1"
indicatif = "0.17.3"
itertools = "0.14.0"
log = { version = "0.4.14", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
num_cpus = "1.13.0"
once_cell = "1.8.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.3", default-features = false, features = [
    "gzip",
    "native-tls",
] }
sitemap = "0.4.1"
thiserror = "2.0.9"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
xml-rs = "0.8.25"

[dev-dependencies]
cargo-llvm-cov = "0.6.6"
mockito = "1.0.2"
test-case = "3.1.0"
